classes/04class/exercises/c04-iac04/beardedsamwise/terraform-code/iac-04-module/sg.tf
# Create security group to allow SSH inbound
resource "aws_security_group" "sg_lb" {
  name = "c04-iac04-lb"
  vpc_id = aws_vpc.main.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "c04-iac04"
  }
}

# Create security group for web servers
resource "aws_security_group" "sg_web" {
  name = "c04-iac04-web"
  vpc_id = aws_vpc.main.id
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "c04-iac04"
  }
}
